# kyc-backend

./: Cargo.toml  README.md  compose.yml  deny.toml  justfile
.docker/e2e/stubs/cuss/src/: server.ts
.docker/keycloak-config/: realm.e2e.json
.roo/rules/: AGENTS.md
app/bins/sms-gateway/: Cargo.toml
app/bins/sms-gateway/src/: main.rs  sms_provider.rs
app/crates/backend-auth/: Cargo.toml
app/crates/backend-auth/src/: lib.rs  middleware.rs  signature_principal.rs
app/crates/backend-auth/tests/: jwt_auth_exclude_paths.rs  signature_verification.rs
app/crates/backend-core/src/: config.rs  error.rs  id.rs  lib.rs
app/crates/backend-e2e/tests/: cucumber_full.rs  cucumber_smoke.rs  flow_sdk.rs  flow_sdk.rs.backup  world.rs
app/crates/backend-e2e/tests/common/: mod.rs
app/crates/backend-flow-sdk/src/: context.rs
app/crates/backend-flow-sdk/src/actions/: get_user.rs  kyc.rs  upgrade_full_name.rs
app/crates/backend-model/: Cargo.toml
app/crates/backend-model/src/: db.rs  lib.rs  schema.rs  user.rs
app/crates/backend-repository/: Cargo.toml
app/crates/backend-repository/src/: traits.rs
app/crates/backend-repository/tests/: user_repo.rs
app/crates/backend-server/: Cargo.toml
app/crates/backend-server/src/: correlation_id.rs  lib.rs  metrics.rs  state.rs  swagger.rs
config/: dev.yaml
deploy/compose/: app.compose.yml  tools.compose.yml
docs/architecture/: backend-redesign-summary.md  kyc-manager-architecture.md  kyc-portal-architecture.md
flows/: address_proof.yaml  first_deposit.yaml  id_document.yaml  phone_otp.yaml
openapi/: user-storage--cuss.yaml  user-storage--staff.yaml  user-storage-bff.yaml
(+18 files in other folders)
