[package]
name = "backend-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[features]
e2e-tests = ["dep:wiremock"]

[dependencies]
axum.workspace = true
backend-core = { workspace = true, features = ["reqwest"] }
base64.workspace = true
http.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
hmac.workspace = true
chrono.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true
async-trait.workspace = true
reqwest.workspace = true
openssl.workspace = true
wiremock = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
